--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "",
   "main": "aa.js",
   "scripts": {
-    "dev": "pnpm -C play dev"
+    "dev": "pnpm -C play dev",
+    "dev:docs":"pnpm -C docs dev"
   },
   "repository": {
     "type": "git",
@@ -23,5 +24,13 @@
     "@tpf/utils": "workspace:^1.0.0",
     "typescript": "^5.0.4",
     "vue": "^3.3.4"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "eslint": "^8.41.0",
+    "eslint-plugin-vue": "^9.13.0",
+    "sass": "^1.62.1"
   }
 }
