--- a/play/package.json
+++ b/play/package.json
@@ -12,6 +12,7 @@
     "vue": "^3.2.47"
   },
   "devDependencies": {
+    "@vicons/ionicons5": "^0.12.0",
     "@vitejs/plugin-vue": "^4.1.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
